gatekeeper/constraints/no-run-as-root.yaml
# Constraint: Cấm runAsUser: 0 (F-04)
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoRunAsRoot
metadata:
  name: no-run-as-root
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  enforcementAction: deny
  match:
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
    namespaces:
      - demo
